# airflow2-dynamic-dags

./: README.md  pyproject.toml
dags/dynamic_dags/: template_dag.py
dags/dynamic_dags/confs/: config-apple.yaml  config-facebook.yaml  config-google.yaml
